--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>BSP-PlayerShops</groupId>
 	<artifactId>BSP-PlayerShops</artifactId>
-	<version>1.2.4</version>
+	<version>1.2.5</version>
 	<name>PlayerShops</name>
+	<properties>
+		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<build>
 		<finalName>BSP-PlayerShops</finalName>
 		<resources>
@@ -21,17 +25,17 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.8.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 	<repositories>
 		<repository>
-			<id>spigot-repo</id>
+			<id>spigotmc-repo</id>
 			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
 		</repository>
 	</repositories>
@@ -39,19 +43,20 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.13.1-R0.1-SNAPSHOT</version>
+			<version>1.16.5-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.black_ixx</groupId>
+			<groupId>org.black_ixx.bossshop</groupId>
 			<artifactId>BossShopPro</artifactId>
-			<version>2.0.0</version>
-			<scope>provided</scope>
+			<version>2.0.9</version>
+			<systemPath>${project.basedir}/lib/BossShopPro.jar</systemPath>
+			<scope>system</scope>
 		</dependency>
 	</dependencies>
 	<description>PlayerShops GUI is the most playerfriendly shop plugin.
-Using this plugin players will be able to create their own virtual shop, where they can sell their items. They will be able to browse around in a public shop listing, check out other shops and purchase items from other players. 
-Everything works with a intuitive inventory GUI - basically zero commands required! 
+Using this plugin players will be able to create their own virtual shop, where they can sell their items. They will be able to browse around in a public shop listing, check out other shops and purchase items from other players.
+Everything works with a intuitive inventory GUI - basically zero commands required!
 PlayerShops is a BossShopPro addon. It requires BossShopPro or higher in order to work.</description>
 	<url>https://www.spigotmc.org/resources/29568/</url>
 </project>
